resources_csdp-may/cdp-default-git-source.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-default-git-source
spec:
  ingressClassName: nginx
  rules:
  - host: charizard-csdp.support.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: push-github-eventsource-svc
            port:
              number: 80
        path: /webhooks/csdp-may/push-github
        pathType: Prefix
